<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:why="http://schemas.android.com/apk/res/edu.sdu.wh.ibook"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#000000"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:onClick="goUser"
            android:src="@drawable/iv_user"
            />
    </RelativeLayout>


        <android.support.v4.view.ViewPager
            android:id="@+id/id_viewPager"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#ffffff"
        />
    <LinearLayout
        android:background="@drawable/tab_bg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        >
        <edu.sdu.wh.ibook.view.BottomBars
            android:id="@+id/indicator_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            why:icon="@drawable/icon_search"
            why:color="#45c01a"
            why:text="@string/tab_search"
            why:text_size="12sp"
            />
        <edu.sdu.wh.ibook.view.BottomBars
            android:id="@+id/indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            why:icon="@drawable/icon_borrow_now"
            why:color="#45c01a"
            why:text="@string/tab_borrowNow"
            why:text_size="12sp"
            />
        <edu.sdu.wh.ibook.view.BottomBars
            android:id="@+id/indicator_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            why:icon="@drawable/icon_borrow_his"
            why:color="#45c01a"
            why:text="@string/tab_borrowHis"
            why:text_size="12sp"
            />
        <edu.sdu.wh.ibook.view.BottomBars
            android:id="@+id/indicator_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            why:icon="@drawable/icon_mydocument"
            why:color="#45c01a"
            why:text="@string/tab_myDocument"
            why:text_size="12sp"
            />
    </LinearLayout>
</LinearLayout>
