<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    >
    <EditText
        android:layout_marginTop="90dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/userNameText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="#000000"
        android:textCursorDrawable="@color/black"
        android:hint="@string/inputuser"
        android:cursorVisible="true"
        android:inputType="textPersonName"
        android:background="@drawable/input_bg"
        />
    <EditText
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="#000000"
        android:textCursorDrawable="@color/black"
        android:hint="@string/inputpassword"
        android:cursorVisible="true"
        android:inputType="textPassword"
        android:background="@drawable/input_bg"
        />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_captcha"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textColor="#000000"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/black"
            android:background="@drawable/input_bg"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:hint="@string/captcha_hint"
            />
        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:id="@+id/iv_captcha"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="#ffffff"
        android:background="@drawable/btn_bg_02"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/login"/>
</LinearLayout>