<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lv_bg">
    <LinearLayout
        android:layout_marginTop="@dimen/marge_top"
        android:layout_marginLeft="@dimen/marge_left"
        android:layout_marginStart="@dimen/marge_left"
        android:layout_marginRight="@dimen/marge_right"
        android:layout_marginEnd="@dimen/marge_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size_middle"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_middle"
            android:id="@+id/tv_pregCode"
            android:textColor="@color/text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/marge_top"
        android:layout_marginLeft="@dimen/marge_left"
        android:layout_marginStart="@dimen/marge_left"
        android:layout_marginRight="@dimen/marge_right"
        android:layout_marginEnd="@dimen/marge_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_author"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size_middle"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pregName"
            android:textSize="@dimen/text_size_middle"
            android:textColor="@color/text"/>
    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="@dimen/marge_top"
        android:layout_marginLeft="@dimen/marge_left"
        android:layout_marginStart="@dimen/marge_left"
        android:layout_marginRight="@dimen/marge_right"
        android:layout_marginEnd="@dimen/marge_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textSize="@dimen/text_size_middle"
            android:textColor="@color/text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pregPlace"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size_middle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/marge_top"
        android:layout_marginLeft="@dimen/marge_left"
        android:layout_marginStart="@dimen/marge_left"
        android:layout_marginRight="@dimen/marge_right"
        android:layout_marginEnd="@dimen/marge_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:text="@string/pregDate"
            android:textSize="@dimen/text_size_middle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pregDate"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size_middle"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/marge_top"
        android:layout_marginLeft="@dimen/marge_left"
        android:layout_marginStart="@dimen/marge_left"
        android:layout_marginRight="@dimen/marge_right"
        android:layout_marginEnd="@dimen/marge_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:text="@string/deadDate"
            android:textSize="@dimen/text_size_middle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pregDeadDate"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size_middle"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/marge_top"
        android:layout_marginLeft="@dimen/marge_left"
        android:layout_marginStart="@dimen/marge_left"
        android:layout_marginRight="@dimen/marge_right"
        android:layout_marginEnd="@dimen/marge_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:text="@string/getPlace"
            android:textSize="@dimen/text_size_middle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pregGetPlace"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size_middle"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/marge_top"
        android:layout_marginLeft="@dimen/marge_left"
        android:layout_marginStart="@dimen/marge_left"
        android:layout_marginRight="@dimen/marge_right"
        android:layout_marginEnd="@dimen/marge_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:text="@string/status"
            android:textSize="@dimen/text_size_middle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pregStatus"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size_middle"
            />
    </LinearLayout>
</LinearLayout>