<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lv_bg">
    <LinearLayout
        android:layout_marginTop="@dimen/marge_top"
        android:layout_marginLeft="@dimen/marge_left"
        android:layout_marginStart="@dimen/marge_left"
        android:layout_marginRight="@dimen/marge_right"
        android:layout_marginEnd="@dimen/marge_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size_middle"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_middle"
            android:id="@+id/tv_asordName"
            android:textColor="@color/text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/marge_top"
        android:layout_marginLeft="@dimen/marge_left"
        android:layout_marginStart="@dimen/marge_left"
        android:layout_marginRight="@dimen/marge_right"
        android:layout_marginEnd="@dimen/marge_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size_middle"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_asordCharge"
            android:textSize="@dimen/text_size_middle"
            android:textColor="@color/text"/>
    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="@dimen/marge_top"
        android:layout_marginLeft="@dimen/marge_left"
        android:layout_marginStart="@dimen/marge_left"
        android:layout_marginRight="@dimen/marge_right"
        android:layout_marginEnd="@dimen/marge_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publishInfo"
            android:textSize="@dimen/text_size_middle"
            android:textColor="@color/text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_asordPublish"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size_middle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/marge_top"
        android:layout_marginLeft="@dimen/marge_left"
        android:layout_marginStart="@dimen/marge_left"
        android:layout_marginRight="@dimen/marge_right"
        android:layout_marginEnd="@dimen/marge_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:text="@string/asordDate"
            android:textSize="@dimen/text_size_middle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_asordDate"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size_middle"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/marge_top"
        android:layout_marginLeft="@dimen/marge_left"
        android:layout_marginStart="@dimen/marge_left"
        android:layout_marginRight="@dimen/marge_right"
        android:layout_marginEnd="@dimen/marge_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:text="@string/asordStatus"
            android:textSize="@dimen/text_size_middle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_asordStatus"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size_middle"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/marge_top"
        android:layout_marginLeft="@dimen/marge_left"
        android:layout_marginStart="@dimen/marge_left"
        android:layout_marginRight="@dimen/marge_right"
        android:layout_marginEnd="@dimen/marge_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:text="@string/note"
            android:textSize="@dimen/text_size_middle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_asordNote"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size_middle"
            />
    </LinearLayout>
</LinearLayout>